--------------------------------------
* service registration had an overhaul, avoiding a complicated, and ultimately
  unnecessary "single globally registered service runner" concept.
  Now, when registering a service, the host pythonservice.exe runner will be
  copied to `sys.exec_prefix`, along with possibly `pywintypesXX.dll` and run
  from there. (#1908)

Build 304, released 2022-05-02
------------------------------
* Fixed Unicode issues in the `dde` module (#1861, @markuskimius )

* Add `PRINTER_INFO_6` support for Set/GetPrinter (#1853, @CristiFati)

* Fixed codepage/mojibake issues when non-ascii characters were included in
  COM exceptions raised by Python apps. This should be invisible, but might
  break any workarounds which were used, such as using specific encodings in
  these strings. (#1823, #1833)

* Fixed a bug triggering `win32print.SetJob` to fail due to data type
  (`char*` / `wchar_t*`) mismatch (#1849, @CristiFati)

* Fix eventlog initialization (#1845, #1846, @kxrob)

Build 303, released 2021-12-20
------------------------------
* Tweaks to how DLLs are loaded and our installation found, which should
  improve virtualenv support and version mismatch issues (#1787, #1794)

* Fixed a bug where `win32clipboard.GetClipboardData()` may have returned extra
  data.

* Binary installers for 32-bit 3.10+ are no longer released (#1805)

Build 302, released 2021-10-11
------------------------------
* Fixed support for unicode as a `win32crypt.CREDENTIAL_ATTRIBUTE.Value`

* Support for Python 3.10, dropped support for Python 3.5 (3.5 security support
  ended 13 Sep 2020)

* Merged win2kras into win32ras. In the unlikely case that anyone is still
  using win2kras, there is a win2kras.py that imports all of win32ras. If you
  import win2kras and it fails with 'you must import win32ras first', then it
  means an old win2kras.pyd exists, which you should remove.

* github branch 'master' was renamed to 'main'.

Build 301, released 2021-05-30