@@ -103,13 +103,13 @@ BOOL PyObject_AsBINDINFO(PyObject *ob, BINDINFO *pPD)
                           &pPD->dwOptions, &pPD->dwOptionsFlags, &pPD->dwCodePage, &obSA, &obIID, &obUnk,
                           &pPD->dwReserved))
         goto done;
-    if (!PyWinObject_AsTaskAllocatedWCHAR(obExtra, &pPD->szExtraInfo, /*bNoneOK=*/TRUE, NULL))
+    if (!PyWinObject_AsTaskAllocatedWCHAR(obExtra, &pPD->szExtraInfo, /*bNoneOK=*/TRUE))
         goto done;
     if (obSTGM != Py_None) {
         PyErr_SetString(PyExc_TypeError, "Sorry - dont support STGMEDIUM yet - must be None");
         goto done;
     }
-    if (!PyWinObject_AsTaskAllocatedWCHAR(obCustomVerb, &pPD->szCustomVerb, /*bNoneOK=*/TRUE, NULL))
+    if (!PyWinObject_AsTaskAllocatedWCHAR(obCustomVerb, &pPD->szCustomVerb, /*bNoneOK=*/TRUE))
         goto done;
     SECURITY_ATTRIBUTES *pSA;
     if (!PyWinObject_AsSECURITY_ATTRIBUTES(obSA, &pSA, TRUE))
